<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">


    <Button
        android:id="@+id/button_second"
        android:layout_width="389dp"
        android:layout_height="44dp"
        android:layout_marginTop="676dp"
        android:text="@string/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="315dp"
        android:fontFamily="sans-serif"
        android:text="@string/info"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRead"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/read_sensors_data"
        app:icon="@android:drawable/btn_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonWrite"
        android:layout_width="173dp"
        android:layout_height="71dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="552dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/write_data"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="88dp"
        android:text="@string/_0_c"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/buttonRead" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="68dp"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tvAverageTemperature" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="60dp"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tvAverageHumidity" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="76dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRead"
        app:srcCompat="@drawable/temp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/water" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="64dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/air" />

</androidx.constraintlayout.widget.ConstraintLayout>
